adds first task routes

--- a/app/views/tasks/new.erb
+++ b/app/views/tasks/new.erb
@@ -17,7 +17,7 @@
 
 and/or, create a new list:
     <br></br>
-    <label>Name:</label>
+    <label>List Name:</label>
       <input  type="text" name="list[name]"></input>
     <br></br>
 
