--- a/app/views/lists/index.erb
+++ b/app/views/lists/index.erb
@@ -1,4 +1,5 @@
 <h1>Your Lists!</h1>
 <%@lists.each do |list|%>
-<p><%=list.name%></p>
+<p><a href="/lists/<%=list.id%>"><%=list.name%></p>
+
 <%end%>
