--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,12 +1,9 @@
 <h3>Tasks:</h3>
 <%@list.tasks.each do |task|%>
-
-<p><%=task.name%></p>
-<form action="/tasks/<%=task.id%>/delete" method="post">
-  <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="Completed Task">
-</form>
+<p><a href='/tasks/<%=task.id%>'><%=task.name%></a></p>
 <%end%>
+
+
 
 
 <br/>
