--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,3 +1,4 @@
+<a href="/lists">Home</a>
 <h3>Tasks:</h3>
 <%@list.tasks.each do |task|%>
 <p><a href='/tasks/<%=task.id%>'><%=task.name%></a></p>
@@ -5,10 +6,12 @@
 
 
 
+<br/>
+<br/>
+<br/>
+<br/>
 
-<br/>
-<br/>
-<br/>
+<a href="/tasks/new">Add a task</a>
 <br/>
 <br/>
 
