--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,4 +1,4 @@
-<a href="/lists">Home</a>
+<a href="/lists">Home</a></br>
 <h3>Tasks:</h3>
 <%@list.tasks.each do |task|%>
 <p><a href='/tasks/<%=task.id%>'><%=task.name%></a></p>
