--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,7 +1,8 @@
 <a href="/lists">Home</a></br>
 <h3>Tasks:</h3>
-<%@list.tasks.each do |task|%>
-<p><a href='/tasks/<%=task.id%>'><%=task.name%></a></p>
+<%@list.tasks.each.with_index(1) do |task, index|%>
+<p><%=index%>.
+<a href='/tasks/<%=task.id%>'><%=task.name%></a></p>
 <%end%>
 
 
