--- a/app/views/tasks/show.erb
+++ b/app/views/tasks/show.erb
@@ -1,4 +1,5 @@
 <a href="/lists">Home</a></br>
+<a href="/logout">logout</a></br>
 <h3>Your Tasks in <%=@task.list.name%>:</h3>
 <p><%=@task.name%></p>
 
