--- a/app/views/lists/edit.erb
+++ b/app/views/lists/edit.erb
@@ -1,4 +1,5 @@
 <a href="/lists">Home</a></br>
+<a href="/logout">logout</a></br>
 <h1>Edit List</h1>
 
 <form action="/lists/<%=@list.id%>" method="POST">
