--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,4 +1,5 @@
 <a href="/lists">Home</a></br>
+<a href="/logout">logout</a></br>
 <h3>Tasks:</h3>
 <%@list.tasks.each.with_index(1) do |task, index|%>
 <p><%=index%>.
