--- a/app/views/tasks/new.erb
+++ b/app/views/tasks/new.erb
@@ -19,7 +19,7 @@
 <label>How importance is this task?</label>
 <%number_array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]%>
 <%number_array.each do |number|%>
-  <input type="checkbox" name="task[importance]" value="number"><%=number%></input>
+  <input type="checkbox" name="task[importance]" value="<%=number%>"><%=number%></input>
 <%end%>
 <br></br>
 
