--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -26,3 +26,5 @@
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete List">
 </form>
+
+<a href="/lists/<%=@list.id%>/edit">Edit List</a>
