really fixes bugs

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
-<h2>Login to Your Organizer!</h2>
+<h2>Login to Your Organizer!</h2><br>
+<a href='/signup' value="SignUp">Sign Up</a>
 
 
 <h3>Login</h3>
